# treesea

./: .gitignore  Claude_IQPU_QCU_整改意见与参考代码.md  Claude_RK4_优化改进建议.md  Claude_振荡拓扑近似层接入方案.md  HCE_技术栈选型文档.md  HCE_整合版总规范.md  PACKAGE_MANIFEST.json  PACKAGE_NOTE.md  README.md  SESSION_HANDOFF.md  _tmp_three_files.txt  bootstrap_manifest.json  correction_note.json  pyproject.toml  requirements.txt  tree_diagram_unified_operator_v27_fixed.py
qcu/: README.md  pyproject.toml
qcu/benchmarks/: otal_bench.py  perf_compare.py
qcu/configs/: qcu_cluster.yaml  qcu_default.yaml  qcu_local_debug.yaml
qcu/demos/: hash_qlang_demo.py  qcu_vs_classical_hash.py  qsharp_hash_search.py
qcu/docs/: QCU_ISA_LANG_PLAN.md
qcu/jobs/: bench_cpu_parallel.py  bench_gpu.py  bench_gpu_wsl.sh  qcu_multi_node.yaml  qcu_scan.yaml  qcu_single.yaml  twcc_bench_cpu.sh
qcu/kdriver/: .gitignore  BUILD.md  DESIGN.md  PRIMER.md  qcu_kdriver.sln
qcu/kdriver/qcu_kdrv/: qcu_kdrv.c  qcu_kdrv.h  qcu_kdrv.vcxproj
qcu/kdriver/qcu_loader/: cfg_patch.cpp  cfg_patch.hpp  loader.cpp  qcu_loader.vcxproj
qcu/mpi/: README.md  mpirun_qcu.sh
qcu/qcu/: __init__.py
qcu/qcu/cli/: inspect.py  main.py  run_local.py  submit.py
qcu/qcu/core/: collapse_operator.py  entanglement_metrics.py  hardware_bridge.py  iqpu_hw.py  iqpu_runtime.py  lindblad_solver.py  lindblad_torch.py  phase_modulation.py  readout.py  state_repr.py  (+1 more)
qcu/qcu_lang/: __init__.py
qcu/slurm/: README.md  qcu_multi_node.sbatch  qcu_scan.sbatch  qcu_single.sbatch
qcu/tests/: test_isa_full.py  test_qsharp.py  test_runner_metadata.py
(+526 files in other folders)
